--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@ body,
     box-sizing: border-box;
     font-size: 62.5%;
  }
- .idk {
-    font-size: 10px;
+ .pet {
+    font-size: 25px;
     display: flex;
     flex-direction: column;
- }
- .idk2 {
     border: 1px solid rgb(159, 193, 236);
+ }
+ .container {
+   display: flex;
+   justify-content: space-evenly
  }
