--- a/style.css
+++ b/style.css
@@ -1,29 +1,30 @@
 html,
 body,
- +{
-    padding: 0;
++{
+    padding 0;
     margin: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; 
     font-size: 62.5%;
- }
+  }
+
  body {
    background-color:rgb(245, 248, 255);
  }
  .pet {
-    font-size: 15px;
-    display: flex;
+    font-size: 25px;
     text-align: center;
+    display: flex;
     flex-direction: column;
     width: 30%;
-    border: 2px solid rgb(159, 193, 236);
+    border: 3px solid rgb(159, 193, 236);
     background-color: rgb(224, 234, 255) ;
     font-family: 'Bitter', serif;
     color:rgb(99, 150, 216);
     box-shadow: 1px 8px 10px rgb(144, 180, 214);
  }
  .header {
+   font-size: 30px;
    text-align: center;
-   font-size: 15px;
    font-family: 'Bitter', serif;
    color:rgb(99, 150, 216);
  }
