--- a/style.css
+++ b/style.css
@@ -22,6 +22,19 @@ body,
     color:rgb(99, 150, 216);
     box-shadow: 1px 8px 10px rgb(144, 180, 214);
  }
+
+ @media screen and (max-width:600px) {
+  .menu-container{
+   flex-direction:column;
+  }
+  .menu-card{
+   width: 100%;
+  }
+  .main-header{
+   font-size: 20px;
+  }
+ }
+ 
  .header {
    font-size: 30px;
    text-align: center;
