--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ body,
    font-size: 20px;
   }
  }
+ @media screen and (max-width:900px) {
+  .menu-container{
+   flex-direction: row;
+  }
  .header {
    font-size: 30px;
    text-align: center;
