--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body,
 
  @media screen and (max-width:600px) {
   .menu-container{
-   flex-direction:column;
+   flex-direction: column;
   }
   .menu-card{
    width: 100%;
@@ -44,6 +44,12 @@ body,
  @media screen and (max-width:900px) {
   .menu-container{
    flex-direction: row;
+  }
+}
+  @media screen and (max-width:414px) {
+    .menu-container{
+     flex-direction: column;
+    }
   }
  .header {
    font-size: 30px;
