--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body,
  body {
    background-color:rgb(245, 248, 255);
  }
+
  .pet {
     font-size: 25px;
     text-align: center;
@@ -18,20 +19,31 @@ body,
     width: 30%;
     justify-content: space-evenly;
     border: 3px solid rgb(159, 193, 236);
-    background-color: rgb(224, 234, 255) ;
+    background-color: rgb(224, 234, 255);
     font-family: 'Bitter', serif;
     color:rgb(99, 150, 216);
     box-shadow: 1px 8px 10px rgb(144, 180, 214);
     width: 20rem;
-    height: 33.5rem;
-    
+    height: 32.5rem;   
+}
+
+.hover {
+  font-family: 'Bitter', serif;
+  color:rgb(99, 150, 216);
+  align-items: center;
+  justify-content: space space-evenly;
+  width: 22%;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
  .rem-size{
     font-size: 2rem;
 }
-.button {
-  border: 0;
+.button1 {
+  border: 1;
+  border-color: rgb(99, 150, 216);
   line-height: 1.5;
   font-size: 1rem;
   text-align: center;
@@ -41,8 +53,72 @@ body,
   background-color: rgba(155, 174, 192, 0.281);
 }
 
-.button:hover {
-  background-color: rgb(177, 209, 230);
+.button1:hover {
+  background-color: rgba(218, 235, 241, 0.61);
+}
+
+.button2 {
+  border: 1;
+  border-color: rgb(99, 150, 216);
+  line-height: 1.5;
+  font-size: 1rem;
+  text-align: center;
+  width: 75px;
+  align-self: center;
+  border-radius: 5px;
+  background-color: rgba(155, 174, 192, 0.281);
+}
+
+.button2:hover {
+  background-color: rgba(197, 231, 231, 0.616);
+}
+
+.button3 {
+  border: 1;
+  border-color: rgb(99, 150, 216);
+  line-height: 1.5;
+  font-size: 1rem;
+  text-align: center;
+  width: 75px;
+  align-self: center;
+  border-radius: 5px;
+  background-color: rgba(155, 174, 192, 0.281);
+}
+
+.button3:hover {
+  background-color: rgba(150, 222, 235, 0.637);
+}
+
+.button4 {
+  border: 1;
+  border-color: rgb(99, 150, 216);
+  line-height: 1.5;
+  font-size: 1rem;
+  text-align: center;
+  width: 75px;
+  align-self: center;
+  border-radius: 5px;
+  background-color: rgba(155, 174, 192, 0.281);
+}
+
+.button4:hover {
+  background-color: rgba(139, 173, 235, 0.651);
+}
+
+.button5 {
+  border: 1;
+  border-color: rgb(99, 150, 216);
+  line-height: 1.5;
+  font-size: 1rem;
+  text-align: center;
+  width: 75px;
+  align-self: center;
+  border-radius: 5px;
+  background-color: rgba(155, 174, 192, 0.281);
+}
+
+.button5:hover {
+  background-color: rgba(33, 8, 145, 0.185);
 }
 
  @media screen and (max-width:600px) {
