--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html,
 body,
 +{
-    padding 0;
-    margin: 0;
-    box-sizing: border-box; 
-    font-size: 62.5%;
+    padding 0
+    margin: 0
+    box-sizing: border-box
+    font-size: 62.5%
   }
 
  body {
@@ -54,7 +54,7 @@ body,
 }
 
 .button1:hover {
-  background-color: rgba(218, 235, 241, 0.61);
+  background-color: rgba(255, 255, 255, 0.185);
   transform: scale(1.5);
 }
 
@@ -71,7 +71,7 @@ body,
 }
 
 .button2:hover {
-  background-color: rgba(197, 231, 231, 0.616);
+  background-color: rgba(255, 255, 255, 0.185);
 }
 
 .button3 {
@@ -87,7 +87,7 @@ body,
 }
 
 .button3:hover {
-  background-color: rgba(150, 222, 235, 0.637);
+  background-color: rgba(255, 255, 255, 0.185);
 }
 
 .button4 {
@@ -103,7 +103,7 @@ body,
 }
 
 .button4:hover {
-  background-color: rgba(139, 173, 235, 0.651);
+  background-color: rgba(255, 255, 255, 0.185);
 }
 
 .button5 {
@@ -119,9 +119,72 @@ body,
 }
 
 .button5:hover {
-  background-color: rgba(33, 8, 145, 0.185);
+  background-color: rgba(255, 255, 255, 0.185);
 }
 
+.button6 {
+  border: 1;
+  border-color: rgb(99, 150, 216);
+  line-height: 1.5;
+  font-size: 1rem;
+  text-align: center;
+  width: 75px;
+  align-self: center;
+  border-radius: 5px;
+  background-color: rgba(155, 174, 192, 0.281);
+}
+
+.button6:hover {
+  background-color: rgba(255, 255, 255, 0.185);
+}
+
+.button7 {
+  border: 1;
+  border-color: rgb(99, 150, 216);
+  line-height: 1.5;
+  font-size: 1rem;
+  text-align: center;
+  width: 75px;
+  align-self: center;
+  border-radius: 5px;
+  background-color: rgba(155, 174, 192, 0.281);
+}
+
+.button7:hover {
+  background-color: rgba(255, 255, 255, 0.185);
+}
+
+.button8 {
+  border: 1;
+  border-color: rgb(99, 150, 216);
+  line-height: 1.5;
+  font-size: 1rem;
+  text-align: center;
+  width: 75px;
+  align-self: center;
+  border-radius: 5px;
+  background-color: rgba(155, 174, 192, 0.281);
+}
+
+.button8:hover {
+  background-color: rgba(255, 255, 255, 0.185);
+}
+
+.button9 {
+  border: 1;
+  border-color: rgb(99, 150, 216);
+  line-height: 1.5;
+  font-size: 1rem;
+  text-align: center;
+  width: 75px;
+  align-self: center;
+  border-radius: 5px;
+  background-color: rgba(155, 174, 192, 0.281);
+}
+
+.button9:hover {
+  background-color: rgba(255, 255, 255, 0.185);
+}
  @media screen and (max-width:600px) {
   .container{
    flex-direction: column;
