--- a/style.css
+++ b/style.css
@@ -11,6 +11,18 @@ body,
    background-color:rgb(245, 248, 255);
  }
 
+ .header-title {
+  font-size: 30px;
+  text-align: center;
+  font-family: 'Bitter', serif;
+  color:rgb(99, 150, 216);
+}
+
+.header-title:hover {
+  color:rgba(155, 174, 192, 0.281);
+  background-color: lightblue;
+}
+
  .pet {
     font-size: 25px;
     text-align: center;
@@ -215,12 +227,6 @@ body,
    }
 }
 
- .header {
-   font-size: 30px;
-   text-align: center;
-   font-family: 'Bitter', serif;
-   color:rgb(99, 150, 216);
- }
  .container {
    display: flex;
    justify-content: space-evenly;
