--- a/style.css
+++ b/style.css
@@ -13,11 +13,15 @@ body,
 
  .header-title {
   font-size: 50px;
-  text-align: center;
   font-family: 'Bitter', serif;
   color:rgb(99, 150, 216);
   -webkit-animation: title 10s linear infinite, bg 10s linear infinite;
   display: inline-block;
+  border
+}
+
+.header {
+  text-align: center;
 }
 
 @-webkit-keyframes title {
