--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body,
 
 @-webkit-keyframes title {
   0% {
-    color: rgb(138, 206, 255);
+    color: rgb(52, 137, 198);
   }
   50% {
     color: #5f9edc;
@@ -90,6 +90,7 @@ body,
 
 .button2:hover {
   background-color: rgba(255, 255, 255, 0.185);
+  transform: scale(1.3);
 }
 
 .button3 {
@@ -108,6 +109,7 @@ body,
 
 .button3:hover {
   background-color: rgba(255, 255, 255, 0.185);
+  transform: scale(1.1);
 }
 
 .button4 {
@@ -126,6 +128,7 @@ body,
 
 .button4:hover {
   background-color: rgba(255, 255, 255, 0.185);
+  transform: scale(0.9);
 }
 
 .button5 {
@@ -144,6 +147,7 @@ body,
 
 .button5:hover {
   background-color: rgba(255, 255, 255, 0.185);
+  transform: scale(0.7);
 }
 
 .button6 {
@@ -162,6 +166,7 @@ body,
 
 .button6:hover {
   background-color: rgba(255, 255, 255, 0.185);
+  transform: scale(0.5);
 }
 
 .button7 {
@@ -180,6 +185,7 @@ body,
 
 .button7:hover {
   background-color: rgba(255, 255, 255, 0.185);
+  letter-spacing: 5px;
 }
 
 .button8 {
@@ -198,6 +204,7 @@ body,
 
 .button8:hover {
   background-color: rgba(255, 255, 255, 0.185);
+  letter-spacing: 3px;
 }
 
 .button9 {
@@ -216,6 +223,7 @@ body,
 
 .button9:hover {
   background-color: rgba(255, 255, 255, 0.185);
+  letter-spacing: 1px;
 }
  @media screen and (max-width:600px) {
   .container{
