--- a/style.css
+++ b/style.css
@@ -240,13 +240,23 @@ body,
  @media screen and (max-width:900px) {
   .menu-container{
    flex-direction: row;
+  }
+  .pet {
    width: 100%;
    height: 100%;
   }
-  .main-header{
-    font-size: 20px;
-   }
 }
+
+@media screen and (max-width:1200px) {
+  .menu-container{
+   flex-direction: row;
+  }
+  .pet {
+   width: 100%;
+   height: 100%;
+  }
+}
+  
 
  .container {
    display: flex;
