--- a/style.css
+++ b/style.css
@@ -64,13 +64,13 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgba(155, 174, 192, 0.281);
+  background-color: rgb(116, 184, 247);
   margin-bottom: 10px;
   margin-top: 5px;
 }
 
 .button1:hover {
-  background-color: rgba(255, 255, 255, 0.185);
+  background-color: rgb(130, 207, 255);
   transform: scale(1.5);
 }
 
@@ -83,13 +83,13 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgba(155, 174, 192, 0.281);
+  background-color: rgb(116, 184, 247);
   margin-bottom: 10px;
   margin-top: 5px;
 }
 
 .button2:hover {
-  background-color: rgba(255, 255, 255, 0.185);
+  background-color: rgb(98, 194, 254);
   transform: scale(1.3);
 }
 
@@ -102,13 +102,13 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgba(155, 174, 192, 0.281);
+  background-color: rgb(116, 184, 247);
   margin-bottom: 10px;
   margin-top: 5px;
 }
 
 .button3:hover {
-  background-color: rgba(255, 255, 255, 0.185);
+  background-color: rgb(36, 162, 240);
   transform: scale(1.1);
 }
 
@@ -121,13 +121,13 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgba(155, 174, 192, 0.281);
+  background-color: rgb(116, 184, 247);
   margin-bottom: 10px;
   margin-top: 5px;
 }
 
 .button4:hover {
-  background-color: rgba(255, 255, 255, 0.185);
+  background-color: rgb(154, 161, 255);
   transform: scale(0.9);
 }
 
@@ -140,13 +140,13 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgba(155, 174, 192, 0.281);
+  background-color: rgb(116, 184, 247);
   margin-bottom: 10px;
   margin-top: 5px;
 }
 
 .button5:hover {
-  background-color: rgba(255, 255, 255, 0.185);
+  background-color: rgb(131, 139, 250);
   transform: scale(0.7);
 }
 
@@ -159,13 +159,13 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgba(155, 174, 192, 0.281);
+  background-color: rgb(116, 184, 247);
   margin-bottom: 10px;
   margin-top: 5px;
 }
 
 .button6:hover {
-  background-color: rgba(255, 255, 255, 0.185);
+  background-color: rgb(101, 111, 255);
   transform: scale(0.5);
 }
 
@@ -178,14 +178,14 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgba(155, 174, 192, 0.281);
+  background-color: rgb(116, 184, 247);
   margin-bottom: 10px;
   margin-top: 5px;
 }
 
 .button7:hover {
-  background-color: rgba(255, 255, 255, 0.185);
-  letter-spacing: 5px;
+  background-color: rgb(164, 232, 255);
+  letter-spacing: 7px;
 }
 
 .button8 {
@@ -197,14 +197,14 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgba(155, 174, 192, 0.281);
+  background-color: rgb(116, 184, 247);
   margin-bottom: 10px;
   margin-top: 5px;
 }
 
 .button8:hover {
-  background-color: rgba(255, 255, 255, 0.185);
-  letter-spacing: 3px;
+  background-color: rgb(125, 222, 254);
+  letter-spacing: 5px;
 }
 
 .button9 {
@@ -216,14 +216,14 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgba(155, 174, 192, 0.281);
+  background-color: rgb(116, 184, 247);
   margin-bottom: 10px;
   margin-top: 5px;
 }
 
 .button9:hover {
-  background-color: rgba(255, 255, 255, 0.185);
-  letter-spacing: 1px;
+  background-color: rgb(64, 205, 252);
+  letter-spacing: 3px;
 }
  @media screen and (max-width:600px) {
   .container{
