--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgb(156, 205, 252);
+  background-color: rgb(172, 214, 253);
+  margin-bottom: 10px;
   margin-top: 5px;
 }
 
@@ -82,7 +83,7 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgb(156, 205, 252);
+  background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
 }
@@ -101,7 +102,7 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgb(156, 205, 252);
+  background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
 }
@@ -120,7 +121,7 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgb(156, 205, 252);
+  background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
 }
@@ -139,7 +140,7 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgb(156, 205, 252);
+  background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
 }
@@ -158,7 +159,7 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgb(156, 205, 252);
+  background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
 }
@@ -177,7 +178,7 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgb(156, 205, 252);
+  background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
 }
@@ -196,7 +197,7 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgb(156, 205, 252);
+  background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
 }
@@ -215,7 +216,7 @@ body,
   width: 65px;
   align-self: center;
   border-radius: 5px;
-  background-color: rgb(156, 205, 252);
+  background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
 }
