--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body,
 .button1:hover {
   background-color: rgb(181, 227, 255);
   transform: scale(1.5);
+  transition-timing-function: linear;
 }
 
 .button2 {
@@ -91,6 +92,7 @@ body,
 .button2:hover {
   background-color: rgb(139, 211, 255);
   transform: scale(1.3);
+  transition-timing-function: linear;
 }
 
 .button3 {
@@ -110,6 +112,7 @@ body,
 .button3:hover {
   background-color: rgb(112, 200, 255);
   transform: scale(1.1);
+  transition-timing-function: linear;
 }
 
 .button4 {
@@ -129,6 +132,7 @@ body,
 .button4:hover {
   background-color: rgb(194, 215, 255);
   border-radius: 15px;
+  transition-timing-function: linear;
 }
 
 .button5 {
@@ -148,6 +152,7 @@ body,
 .button5:hover {
   background-color: rgb(153, 189, 255);
   border-radius: 13px;
+  transition-timing-function: linear;
 }
 
 .button6 {
@@ -167,6 +172,7 @@ body,
 .button6:hover {
   background-color: rgb(126, 171, 255);
   border-radius: 11px;
+  transition-timing-function: linear;
 }
 
 .button7 {
@@ -186,6 +192,7 @@ body,
 .button7:hover {
   background-color: rgb(164, 232, 255);
   letter-spacing: 7px;
+  transition-timing-function: linear;
 }
 
 .button8 {
@@ -205,6 +212,7 @@ body,
 .button8:hover {
   background-color: rgb(144, 227, 255);
   letter-spacing: 5px;
+  transition-timing-function: linear;
 }
 
 .button9 {
@@ -224,6 +232,7 @@ body,
 .button9:hover {
   background-color: rgb(113, 220, 255);
   letter-spacing: 3px;
+  transition-timing-function: linear;
 }
  @media screen and (max-width:600px) {
   .container{
