--- a/style.css
+++ b/style.css
@@ -67,12 +67,12 @@ body,
   background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
+  transition-duration: 1s;
 }
 
 .button1:hover {
   background-color: rgb(181, 227, 255);
   transform: scale(1.5);
-  transition-timing-function: linear;
 }
 
 .button2 {
@@ -87,12 +87,12 @@ body,
   background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
+  transition-duration: 1s;
 }
 
 .button2:hover {
   background-color: rgb(139, 211, 255);
   transform: scale(1.3);
-  transition-timing-function: linear;
 }
 
 .button3 {
@@ -107,12 +107,12 @@ body,
   background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
+  transition-duration: 1s;
 }
 
 .button3:hover {
   background-color: rgb(112, 200, 255);
   transform: scale(1.1);
-  transition-timing-function: linear;
 }
 
 .button4 {
@@ -127,12 +127,12 @@ body,
   background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
+  transition-duration: 1s;
 }
 
 .button4:hover {
   background-color: rgb(194, 215, 255);
   border-radius: 15px;
-  transition-timing-function: linear;
 }
 
 .button5 {
@@ -147,12 +147,12 @@ body,
   background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
+  transition-duration: 1s;
 }
 
 .button5:hover {
   background-color: rgb(153, 189, 255);
   border-radius: 13px;
-  transition-timing-function: linear;
 }
 
 .button6 {
@@ -167,12 +167,12 @@ body,
   background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
+  transition-duration: 1s;
 }
 
 .button6:hover {
   background-color: rgb(126, 171, 255);
   border-radius: 11px;
-  transition-timing-function: linear;
 }
 
 .button7 {
@@ -187,12 +187,12 @@ body,
   background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
+  transition-duration: 1s;
 }
 
 .button7:hover {
   background-color: rgb(164, 232, 255);
   letter-spacing: 7px;
-  transition-timing-function: linear;
 }
 
 .button8 {
@@ -207,12 +207,12 @@ body,
   background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
+  transition-duration: 1s;
 }
 
 .button8:hover {
   background-color: rgb(144, 227, 255);
   letter-spacing: 5px;
-  transition-timing-function: linear;
 }
 
 .button9 {
@@ -227,12 +227,12 @@ body,
   background-color: rgb(172, 214, 253);
   margin-bottom: 10px;
   margin-top: 5px;
+  transition-duration: 1s;
 }
 
 .button9:hover {
   background-color: rgb(113, 220, 255);
   letter-spacing: 3px;
-  transition-timing-function: linear;
 }
  @media screen and (max-width:600px) {
   .container{
