--- a/style.css
+++ b/style.css
@@ -304,7 +304,8 @@ body,
   transform: translate3d(-200%, 0, 0);
 }
 
- @media screen and (max-width:600px) {
+ @media screen 
+ and (max-width:600px) {
   .container{
    flex-direction: column;
   }
@@ -316,17 +317,26 @@ body,
    font-size: 20px;
   }
 }
- @media screen and (max-width:900px) {
-  .menu-container{
-   flex-direction: row;
+
+@media only screen 
+and (min-device-width : 820px) 
+and (max-device-width : 1080px) 
+and (orientation : landscape) {
+   .container{
+   flex-direction: column;
   }
-  .pet {
+  .pet{
    width: 100%;
    height: 100%;
   }
-}
+  .main-header{
+   font-size: 20px;
+  }
+ }
 
-@media screen and (max-width:1200px) {
+@media only screen   
+and (min-device-width : 768px)   
+and (max-device-width : 1024px) {
   .menu-container{
    flex-direction: row;
   }
