--- a/style.css
+++ b/style.css
@@ -321,10 +321,7 @@ body,
 @media only screen 
 and (min-device-width : 820px) 
 and (max-device-width : 1080px) 
-and (orientation : landscape) {
-   .container{
-   flex-direction: row;
-  }
+and (orientation : landscape) 
   .pet{
    width: 100%;
    height: 100%;
